<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/signin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.20"
        android:maxWidth="312dp"
        android:text="@string/signin_title_label_1"
        android:textColor="@color/grey_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <carbon.widget.EditText
        android:background="@drawable/edit_text_background"
        android:inputType="textVisiblePassword"
        app:carbon_cornerRadius="100dp"
        android:id="@+id/signin_jid_edit_text"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:carbon_cursorColor="@color/blue_500"
        android:hint="@string/signin_edit_text_jid_label"
        app:carbon_elevation="2dp"
        android:textColor="@color/grey_900"
        android:textColorHint="@color/grey_400"
        android:textSize="17sp"
        app:carbon_elevationShadowColor="@color/grey_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_title" />

    <carbon.widget.EditText
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:imeOptions="actionDone"
        android:id="@+id/signin_password_edit_text"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        app:carbon_cornerRadius="100dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:carbon_cursorColor="@color/blue_500"
        android:hint="@string/signin_edit_text_password_label"
        app:carbon_elevation="2dp"
        android:inputType="textPassword"
        android:textColor="@color/grey_900"
        android:textColorHint="@color/grey_400"
        app:carbon_elevationShadowColor="@color/grey_500"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_jid_edit_text" />

    <TextView
        android:focusable="false"
        android:id="@+id/signin_subtitle_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:lineSpacingMultiplier="1.1"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:autoLink="none"
        android:text="@string/signin_subtitle_label_1"
        android:textColor="@color/grey_text"
        android:textColorHighlight="@color/transparent"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_password_edit_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_connect"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:textIsSelectable="false"
        android:layout_marginBottom="48dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/signin_connect_button_label"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:theme="@style/SignUpButtonNext"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:layout_constraintTop_toTopOf="@id/signin_subtitle_1"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_feature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_connect"
        tools:itemCount="3"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_feature" />

    <TextView
        android:id="@+id/signin_subtitle_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:lineSpacingMultiplier="1.1"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="16dp"
        android:autoLink="none"
        android:gravity="center"
        android:text="@string/signin_subtitle_label_2"
        android:textColor="@color/green_600"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_feature" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_rock"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="48dp"
        android:enabled="true"
        android:gravity="center"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/signin_rock_button_label"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:theme="@style/SignUpButtonNext"
        android:visibility="gone"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/signin_subtitle_2" />
</androidx.constraintlayout.widget.ConstraintLayout>