<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.20"
        android:maxWidth="312dp"
        android:maxLines="2"
        android:text="@string/signup_title_label_1"
        android:textColor="@color/grey_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <carbon.widget.EditText
        android:background="@drawable/edit_text_background"
        android:imeOptions="actionDone"
        android:inputType="textVisiblePassword"
        android:id="@+id/signup_edit_text"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:carbon_cornerRadius="100dp"
        app:carbon_cursorColor="@color/blue_500"
        android:hint="@string/signup_edit_text_label_1"
        app:carbon_elevation="2dp"
        android:textColor="@color/grey_900"
        android:textColorHint="@color/grey_400"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title"
        app:carbon_elevationShadowColor="@color/grey_500" />

    <TextView
        android:id="@+id/signup_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:lineSpacingMultiplier="1.1"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/signup_subtitle_1"
        android:textColor="@color/grey_text"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_edit_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="48dp"
        android:insetLeft="0dp"
        android:layout_marginBottom="48dp"
        android:enabled="false"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:textIsSelectable="false"
        android:text="@string/signup_next_button"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:theme="@style/SignUpButtonNext"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/signup_subtitle"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:indeterminateTint="@color/grey_400"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="@+id/btnNext"
        app:layout_constraintTop_toTopOf="@+id/btnNext" />

    <com.google.android.material.card.MaterialCardView
        android:theme="@style/LargeAvatarCardView"
        android:visibility="gone"
        android:id="@+id/profile_image_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        app:cardCornerRadius="196dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title">

        <ImageView
            android:id="@+id/profile_image_emoji"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_baseline_insert_emoticon_24"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:theme="@style/MinimumAvatarCardView"
        android:visibility="gone"
        android:id="@+id/profile_photo_background"
        android:layout_width="64dp"
        android:layout_margin="6dp"
        android:layout_height="64dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="@id/profile_image_background"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image_background">

        <ImageView
            android:id="@+id/profile_photo_camera"
            android:layout_margin="14dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_baseline_photo_camera_24"/>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>