<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="384dp"
    android:background="@drawable/avatar_background"
    android:orientation="vertical" >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/bottom_sheet_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/avatar_swipe" />

    <RelativeLayout
        android:id="@+id/emoji_view_group"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true" >

        <ImageView
            android:id="@+id/image_view_emoji"
            app:srcCompat="@drawable/ic_material_emoticon_24"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnEmoji"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@color/transparent"
            android:text="@string/signup_bottom_sheet_button_emoji_label"
            android:textAllCaps="false"
            android:textColor="@color/grey_600"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/image_view_emoji"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/image_view_emoji" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/selfie_view_group"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true" >

        <ImageView
            android:id="@+id/image_view_selfie"
            app:srcCompat="@drawable/ic_material_camera_24"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnSelfie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@color/transparent"
            android:text="@string/signup_bottom_sheet_button_selfie_label"
            android:textAllCaps="false"
            android:textColor="@color/grey_600"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/image_view_selfie"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/image_view_selfie" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chose_image_view_group"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="8dp" >

        <ImageView
            android:id="@+id/image_view_chose_image"
            app:srcCompat="@drawable/ic_material_image_24"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnChoseImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@color/transparent"
            android:text="@string/signup_bottom_sheet_button_chose_label"
            android:textAllCaps="false"
            android:textColor="@color/grey_600"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/image_view_chose_image"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/image_view_chose_image" />
    </RelativeLayout>
</LinearLayout>